--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_form_builder: ^6.0.1
+  file_picker: ^3.0.0
+  firebase_core: 0.4.0+8
+  firebase_storage: ^3.0.4
+  image_cropper: ^1.0.2
+  image_picker: 0.6.0+17
+  permission_handler: ^6.1.1
+  community_material_icon: ^5.9.55
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
